--- a/notebooks/Question_Sheet_3_clustering.ipynb
+++ b/notebooks/Question_Sheet_3_clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,14 +62,14 @@
     "\\newcommand{\\yt}{\\tilde{\\y}}\n",
     "$$\n",
     "\n",
-    "<h1> Question sheet 2: classification and clustering </h1>"
+    "<h1> Question sheet 3: clustering </h1>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3> Question 1: Classification: maximum likelihood </h3>\n",
+    "<h3> Question 1: Maximum likelihood </h3>\n",
     "\n",
     "Find the best model on the following test-set, using the log-likelihood as the objective.\n",
     "\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "tensor([-4.2636e-01, -9.1636e-01, -9.1142e-04])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3> Question 2: Classification: maximum a-posteriori </h3>\n",
+    "<h3> Question 2: Regularised maximum likelihood </h3>\n",
     "    \n",
     "Using the models and test-set given in Q1, use the log-joint probability as the objective to find the best model.  Use the following prior over the weights,\n",
     "\n",
@@ -232,13 +232,13 @@
     "Compute the log-prior for each model\n",
     "\n",
     "\\begin{align}\n",
-    "  \\log \\P{\\w} &= -\\tfrac{1}{2} \\sum_i w_i^2 + \\text{const}\n",
+    "  \\text{reg} &= -\\tfrac{1}{2} \\sum_i w_i^2\n",
     "\\end{align}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -247,20 +247,20 @@
        "tensor([  -1.0000,   -8.0000, -100.0000])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "log_prior = t.zeros(3)\n",
-    "log_prior[0] = -0.5*(1**2  + 1**2)\n",
-    "log_prior[1] = -0.5*(4**2  + 0.01**2)\n",
-    "log_prior[2] = -0.5*(10**2 + 10**2)\n",
+    "reg = t.zeros(3)\n",
+    "reg[0] = -0.5*(1**2  + 1**2)\n",
+    "reg[1] = -0.5*(4**2  + 0.01**2)\n",
+    "reg[2] = -0.5*(10**2 + 10**2)\n",
     "\n",
-    "assert t.allclose(log_prior, -0.5*(W**2).sum(0))\n",
+    "assert t.allclose(reg, -0.5*(W**2).sum(0))\n",
     "\n",
-    "log_prior"
+    "reg"
    ]
   },
   {
@@ -287,14 +287,14 @@
     }
    ],
    "source": [
-    "log_joint = t.zeros(3)\n",
-    "log_joint[0] = log_prior[0] + lp[0]\n",
-    "log_joint[1] = log_prior[1] + lp[1]\n",
-    "log_joint[2] = log_prior[2] + lp[2]\n",
+    "L = t.zeros(3)\n",
+    "L[0] = reg[0] + lp[0]\n",
+    "L[1] = reg[1] + lp[1]\n",
+    "L[2] = reg[2] + lp[2]\n",
     "\n",
-    "assert t.allclose(log_joint, log_prior + lp)\n",
+    "assert t.allclose(L, reg + lp)\n",
     "\n",
-    "log_joint"
+    "L"
    ]
   },
   {
@@ -316,7 +316,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -338,7 +344,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "Therefore, the predictions are,"
    ]
@@ -346,7 +356,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -368,7 +384,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "Compared to the original $y$,"
    ]
@@ -376,7 +396,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -398,7 +424,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "We see that the second (middle) model makes one error."
    ]
@@ -424,7 +454,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "X = t.tensor([\n",
@@ -450,7 +484,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "First, compute (squared) distances from the test datapoint, $(0.2, -0.3)$, to the training datapoints,"
    ]
@@ -458,7 +496,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -487,7 +531,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "Smallest distances are for datapoints 0, 2, 5.\n",
     "\n",
@@ -517,7 +565,13 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -546,7 +600,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "Remember in the lectures we had the following formula,\n",
     "\n",
@@ -560,7 +618,13 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -581,7 +645,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "So this weighted-nearest neighbours algorithm classifies the test-point as $y=1$."
    ]
@@ -608,7 +676,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "Begin by fitting distributions for each class,"
    ]
@@ -616,7 +688,13 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -655,7 +733,13 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -684,7 +768,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "We have just obtained $\\P{x| y=0}$ and $\\P{x| y=1}$.  To convert this into the posterior, $\\P{y=1| x}$, we need to apply Bayes theorem,\n",
     "\n",
@@ -704,7 +792,13 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -724,7 +818,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "So, $\\P{y=1| x} = 0.9996$."
    ]
@@ -750,7 +848,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "Ans: all of them are equivalent (because they all group the same datapoints together)."
    ]
@@ -778,7 +880,13 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -824,7 +932,11 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "X = t.tensor([\n",
@@ -840,7 +952,13 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -862,24 +980,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "So the fifth datapoint should be assigned to cluster 1."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
