--- a/notebooks/part_1_likelihood.ipynb
+++ b/notebooks/part_1_likelihood.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
     "\\newcommand{\\I}{\\mathbf{I}}\n",
     "$$\n",
     "\n",
-    "<h1> Lecture 0: Likelihoods and modelling </h1>\n",
+    "<h1> Part 1: Likelihoods and modelling </h1>\n",
     "\n",
     "First things first:\n",
     "<ul>\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -150,13 +150,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a4a00cb0a0e421e822bf91463853eb7",
+       "model_id": "14b5001e183543eeada72dea9a4b4df2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,13 +226,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f45f08e94beb44b3b39c2cb047af7a42",
+       "model_id": "acad07418fec483f8c3be219e53aac55",
        "version_major": 2,
        "version_minor": 0
       },
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "        [0.0600]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "torch.Size([99, 1])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,13 +315,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d7ec3d89481405098ecd2656069619e",
+       "model_id": "c3bd598ac5984cc5a4ae1e5968a80724",
        "version_major": 2,
        "version_minor": 0
       },
@@ -375,15 +375,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Bernoulli(probs: 0.1666666716337204)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def fit_bernoulli(xs):\n",
     "    p = xs.sum() / xs.shape[-1]\n",
     "    return Bernoulli(probs=p)\n",
     "\n",
-    "fitted_bernoulli = fit_bernoulli(xs)"
+    "fitted_bernoulli = fit_bernoulli(xs)\n",
+    "fitted_bernoulli"
    ]
   },
   {
@@ -395,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +416,7 @@
        "tensor([0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 1.])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,16 +427,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0., 0., 1., 1., 0., 0., 0., 0., 0., 0., 0., 0.])"
+       "tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +458,7 @@
     "In particular, lets say we have a population of coins, whose probabilities are drawn from a uniform distribution,\n",
     "\n",
     "\\begin{align}\n",
-    "  \\P{p} &= \\Uniform{p; 0, 1}\n",
+    "  \\P{p} &= \\text{Uniform}(p; 0, 1)\n",
     "\\end{align}\n",
     "\n",
     "we take out one coin, toss it twice, and get two zeros,"
@@ -454,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +493,7 @@
        "Bernoulli(probs: 0.0)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,13 +515,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90a69f519fc54aa5b43745aadbfe2aac",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -556,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +577,7 @@
        "torch.Size([2, 100000])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,16 +597,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ True, False, False,  ..., False,  True, False])\n",
-      "tensor(33261)\n",
-      "torch.Size([33261])\n"
+      "tensor([ True, False, False,  ..., False, False,  True])\n",
+      "tensor(33462)\n",
+      "torch.Size([33462])\n"
      ]
     }
    ],
@@ -615,13 +627,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5bc55ebcbabe45e2a28b4de77742b1e8",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -678,13 +690,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb6b3bb34fa247b0a25e645184ab26fd",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -767,150 +779,7 @@
     "\\begin{align}\n",
     "  \\E{\\x} &= \\m\\\\\n",
     "  \\Cov{\\x} &= \\S\n",
-    "\\end{align}\n",
-    "\n",
-    "In code,"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torch.distributions import MultivariateNormal as MvNormal\n",
-    "mu = t.ones(2)\n",
-    "Sigma = t.ones(2,2) + t.eye(2)\n",
-    "dist = MvNormal(mu, Sigma)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[0.1393, 0.6440],\n",
-      "        [0.9305, 2.5690],\n",
-      "        [4.5090, 4.3091],\n",
-      "        [0.1447, 1.5967],\n",
-      "        [3.0341, 0.2578],\n",
-      "        [0.8582, 1.6900]])\n",
-      "torch.Size([1000000, 2])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([2])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "N = 10**6\n",
-    "X = dist.sample((N,))\n",
-    "print(X[:6, :])\n",
-    "print(X.shape)\n",
-    "mu.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3> The mean of the multivariate normal </h3>\n",
-    "The expected value of $\\x$ is given by,\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\m  &= \\E{\\x}\\\\\n",
-    "\\end{align}\n",
-    "\n",
-    "so the empirical mean is,\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\mh &= \\tfrac{1}{N} \\sum_{\\lambda=1}^N \\x_{\\lambda}\n",
-    "\\end{align}\n",
-    "\n",
-    "and as $ \\x_\\lambda = X_{\\lambda, :} $\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\hat{\\mu}_i &= \\tfrac{1}{N} \\sum_{\\lambda=1}^N X_{\\lambda i}\n",
-    "\\end{align}\n",
-    "\n",
-    "Now we can check that the true mean is close to the empirical mean,"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([1., 1.])\n",
-      "tensor([0.9971, 0.9966])\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(mu)\n",
-    "mh = X.sum(0)/N\n",
-    "print(mh)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3> The covariance of the multivariate normal</h3>\n",
-    "While the mean characterises the location of the data, the covariance characterises its shape.\n",
-    "\n",
-    "The covariance is defined as,\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\S &= \\E{\\b{\\x - \\E{\\x}} \\b{\\x - \\E{\\x}}^T}\n",
-    "\\end{align}\n",
-    "\n",
-    "so the empirical covariance is,\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\Sh &= \\tfrac{1}{N} \\sum_{\\lambda=1}^N \\b{\\x_\\lambda - \\mh} \\b{\\x_\\lambda - \\mh}^T\\\\\n",
-    "  \\hat{\\Sigma}_{ij} &= \\tfrac{1}{N} \\sum_{\\lambda=1}^N \\b{X_{\\lambda i} - \\hat{\\mu}_{i}} \\b{X_{\\lambda j} - \\hat{\\mu}_{j}}\\\\\n",
-    "  \\Sh &= \\tfrac{1}{N} \\b{\\X - \\mh}^T \\b{\\X - \\mh}\n",
-    "\\end{align}\n",
-    "\n",
-    "Lets check this expression,"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[2., 1.],\n",
-      "        [1., 2.]])\n",
-      "tensor([[1.9971, 0.9984],\n",
-      "        [0.9984, 1.9973]])\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(Sigma)\n",
-    "Sh = (X-mh).T @ (X-mh) / N\n",
-    "print(Sh)"
+    "\\end{align}"
    ]
   },
   {
@@ -922,13 +791,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f49d846bbd1d42729332ebc3a8f0e885",
+       "model_id": "34be96fd1dcc4f289a243f7087c56cce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -996,206 +865,22 @@
     "  \\mh, \\Sh = \\argmax_{\\m, \\S} \\sb{\\sum_\\lambda \\log \\N{\\x_\\lambda| \\m, \\S}}\n",
     "\\end{align}\n",
     "\n",
-    "This seems sensible, but it is not at all obvious!  (Left as an exercise for the reader.)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3> Bayesian fitting of $\\mu$ </h3>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We assume that $\\m$ has a multivariate Normal prior,\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\P{\\m} &= \\N{\\m; \\0, \\Sprior}\\\\\n",
-    "  \\P{\\x_\\lambda| \\m} &= \\N{\\x_\\lambda; \\m, \\Q}\n",
-    "\\end{align}"
+    "This seems sensible, but requires some fairly hairy matrix differentials to prove."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ea7a06dcd60478b93bb5065cb757fbd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=100, description='N', min=1), Button(description='Run Interact', style=B…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "Sprior = 2*t.eye(2)\n",
-    "Q = t.tensor([[0.3, 0.2], [0.2, 0.5]])\n",
-    "Pm = MvNormal(t.zeros(2), Sprior)\n",
-    "def sample_X(N):\n",
-    "    m = Pm.sample()\n",
-    "    X = MvNormal(m, Q).sample((N,))\n",
-    "    \n",
-    "    fig, ax = plt.subplots()\n",
-    "    ax.set_xlabel(\"$x_0$\")\n",
-    "    ax.set_ylabel(\"$x_1$\")\n",
-    "    ax.set_xlim(-5, 5)\n",
-    "    ax.set_ylim(-5, 5)\n",
-    "    ax.scatter(X[:, 0], X[:, 1])\n",
-    "    ax.scatter(m[0:1], m[1:2])\n",
-    "    \n",
-    "interact_manual(sample_X, N=IntSlider(min=1, max=100, value=100));"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "And our goal is to compute,\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\P{\\m| \\X} &\\propto \\P{\\m} \\prod_\\lambda \\P{\\x_\\lambda| \\m}\\\\\n",
-    "  \\log \\P{\\m| \\X} &= \\log \\P{\\m} + \\sum_\\lambda \\log \\P{\\x_\\lambda| \\m} + \\text{const}\n",
-    "\\end{align}\n",
-    "\n",
-    "First, we write out the log-probability under the prior,\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\log \\P{\\m} &= -\\underbrace{\\tfrac{1}{2} \\m^T \\S^{-1} \\m}_\\text{quadratic} + \\text{const}\n",
-    "\\end{align}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Second, we write out the log-likelihood for a single data-point,\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\log \\P{\\x_\\lambda| \\m} &= -\\tfrac{1}{2} \\b{\\x_\\lambda - \\m}^T \\Q^{-1} \\b{\\x_\\lambda - \\m} + \\text{const}\\\\\n",
-    "  \\log \\P{\\x_\\lambda| \\m} &= -\\tfrac{1}{2} \\sb{\\m^T \\Q^{-1} \\m - \\x_\\lambda^T \\Q^{-1} \\m - \\m^T \\Q^{-1} \\x_\\lambda + \\x_\\lambda^T \\Q^{-1} \\x_\\lambda} + \\text{const}\n",
-    "\\end{align}\n",
-    "\n",
-    "As,\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\mathbf{a}^T \\mathbf{b} = \\mathbf{b}^T \\mathbf{a} = \\sum_i a_i b_i,\n",
-    "\\end{align}\n",
-    "\n",
-    "we have,\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\m^T \\Q^{-1} \\x_\\lambda = \\m^T \\b{\\Q^{-1}}^T \\x_\\lambda = \\b{\\Q^{-1} \\m}^T \\x_\\lambda = \\x_\\lambda^T \\b{\\Q^{-1} \\m} = \\x_\\lambda^T \\Q^{-1} \\m\n",
-    "\\end{align}\n",
-    "\n",
-    "And as $\\x_\\lambda^T \\Q^{-1} \\x_\\lambda$ does not vary with $\\m$, we can incorporate that term into the constant,\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\log \\P{\\x_\\lambda| \\m} &=\\underbrace{-\\tfrac{1}{2} \\m^T \\Q^{-1} \\m}_\\text{quadratic} + \\underbrace{\\m^T \\Q^{-1} \\x_\\lambda}_\\text{linear} + \\text{const}.\n",
-    "\\end{align}\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The log-prior and log-likelihood are quadratic functions of $\\m$, so we know the posterior must also be Gaussian.\n",
-    "\n",
-    "The easiest way of identifying the posterior mean and covariance is to name them $\\mpost$ and $\\Spost$, and compute the corresponding quadratic and linear terms,\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\log \\P{\\m| \\X} &= -\\tfrac{1}{2} \\b{\\m - \\mpost}^T \\Spost^{-1} \\b{\\m - \\mpost} + \\text{const}\\\\\n",
-    "  &= -\\tfrac{1}{2} \\sb{\\m^T \\Spost^{-1} \\m - \\mpost^T \\Spost^{-1} \\m - \\m^T \\Spost^{-1} \\mpost + \\mpost^T \\Spost^{-1} \\mpost} + \\text{const}\\\\\n",
-    "    &=\\underbrace{-\\tfrac{1}{2} \\m^T \\Spost^{-1} \\m}_\\text{quadratic} + \\underbrace{\\m^T \\Spost^{-1} \\mpost}_\\text{linear} + \\text{const}.\n",
-    "\\end{align}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, we know,\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\log \\P{\\m| \\X} &= \\log \\P{\\m} + \\sum_\\lambda \\log \\P{\\x_\\lambda| \\m} + \\text{const}\\\\\n",
-    "  -\\underbrace{\\tfrac{1}{2} \\m^T \\Spost^{-1} \\m}_\\text{quadratic} + \\underbrace{\\m^T \\Spost^{-1} \\mpost}_\\text{linear} &= - \\underbrace{\\tfrac{1}{2} \\m^T \\Sprior^{-1} \\m}_\\text{quadratic} + \\sum_\\lambda \\sb{\\underbrace{-\\tfrac{1}{2} \\m^T \\Q^{-1} \\m}_\\text{quadratic} + \\underbrace{\\m^T \\Q^{-1} \\x_\\lambda}_\\text{linear}}\n",
-    "\\end{align}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As this must be true for all settings of $\\m$, we can separately match the liner and quadratic terms.\n",
-    "\n",
-    "For the quadratic terms,\n",
-    "\\begin{align}\n",
-    "  -\\tfrac{1}{2} \\m^T \\Spost^{-1} \\m &= - \\tfrac{1}{2} \\m^T \\Sprior^{-1} \\m - \\sum_\\lambda \\sb{\\tfrac{1}{2} \\m^T \\Q^{-1} \\m}\n",
-    "\\end{align}\n",
-    "\n",
-    "As this must be true for all $\\m$,\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\Spost^{-1} &= \\Sprior^{-1} + \\sum_\\lambda \\Q^{-1}\\\\\n",
-    "  \\Spost^{-1} &= \\Sprior^{-1} + N \\Q^{-1}\\\\\n",
-    "  \\Spost &= \\b{\\Sprior^{-1} + N \\Q^{-1}}^{-1}\n",
-    "\\end{align}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And for the linear terms,\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\m^T \\Spost^{-1} \\mpost &= \\sum_\\lambda \\m^T \\Q^{-1} \\x_\\lambda\\\\\n",
-    "  \\m^T \\Spost^{-1} \\mpost &= N \\m^T \\Q^{-1} \\langle\\x\\rangle\\\\\n",
-    "\\end{align}\n",
-    "\n",
-    "where,\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\langle \\x \\rangle = \\tfrac{1}{N} \\sum_{\\lambda=1}^N \\x_\\lambda.\n",
-    "\\end{align}\n",
-    "\n",
-    "As this must be true for all $\\m$,\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\Spost^{-1} \\mpost &= N \\Q^{-1} \\langle\\x\\rangle\\\\\n",
-    "  \\mpost &= N \\Spost \\Q^{-1} \\langle\\x\\rangle\\\\\n",
-    "\\end{align}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As a sanity-check, consider a very large number of data points, $N$,\n",
-    "\n",
-    "In that case, \n",
-    "\\begin{align}\n",
-    "  \\Sprior^{-1} + N \\Q^{-1} \\approx N \\Q^{-1}\n",
-    "  \\Spost = \\b{\\Sprior^{-1} + N \\Q^{-1}}^{-1} \\approx \\b{N \\Q^{-1}}^{-1} = \\tfrac{1}{N} \\Q\n",
-    "\\end{align}\n",
-    "\n",
-    "so,\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\mpost &\\approx N \\b{\\tfrac{1}{N} \\Q} \\Q^{-1} \\langle\\x\\rangle = \\langle \\x \\rangle\n",
-    "\\end{align}\n"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
