--- a/notebooks/part_2_regression.ipynb
+++ b/notebooks/part_2_regression.ipynb
@@ -52,7 +52,7 @@
     "\\newcommand{\\I}{\\mathbf{I}}\n",
     "$$\n",
     "\n",
-    "<h1> Lecture 1: Supervised learning: classification and regression </h1>\n",
+    "<h1> Part 3: Supervised learning: classification and regression </h1>\n",
     "\n",
     "First things first:\n",
     "<ul>\n",
