--- a/notebooks/part_4_classification.ipynb
+++ b/notebooks/part_4_classification.ipynb
@@ -66,7 +66,7 @@
     "\\DeclareMathOperator*{\\sigmoid}{sigmoid}\n",
     "$$\n",
     "\n",
-    "<h1> Lecture 5: Classification </h1>\n",
+    "<h1> Part 4: Classification </h1>\n",
     "\n",
     "Classification is almost exactly the same as regression, except that:\n",
     "<ul>\n",
